# vala-examples

./: meson.build
data/: gschema.xml  meson.build
src/: Application.vala  HeaderBar.vala  MainWindow.vala  SettingsManager.vala  SettingsWindow.vala
